--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,8 +10,11 @@
     {% endif %}
 </head>
 <body>
-<div>Flask-Sec: <a href="/index">Home</a></div>
-<hr>
+    <div>Flask-Sec: <a href="/index">Home</a>
+                    <a href="/register">Register</a>
+                    <a href="/login">Login</a>
+    </div>
+    <hr>
 {% block content %}{% endblock %}
 </body>
 </html>
