--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,11 +10,20 @@
     {% endif %}
 </head>
 <body>
-    <div>Flask-Sec: <a href="/index">Home</a>
+    <div>Flask-Sec: <a href="{{ url_for('index') }}">Home</a>
                     <a href="/register">Register</a>
-                    <a href="/login">Login</a>
+                    <a href="{{url_for('login') }}">Login</a>
     </div>
     <hr>
-{% block content %}{% endblock %}
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+    <ul>
+        {% for messagee in messages %}
+        <li>{{ message }}</li>
+        {% endfor %}
+    </ul>
+    {% endif %}
+    {% endwith %}
+    {% block content %}{% endblock %}
 </body>
 </html>
