--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,9 +14,9 @@
                     {% if current_user.is_anonymous %}
                     <a href="{{ url_for('login') }}">Login</a>
                     {% else %}
-                    <a href="{{ url_for('logout') }}">logout</a
-                    {% endif %}>
-                    
+                    <a href="{{ url_for('logout') }}">logout</a>
+                    {% endif %}
+                    <a href="{{ url_for('register') }}">Register</a>
 
     </div>
     <hr>
