--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -30,5 +30,6 @@
             {{ form.submit() }}
         </p>
     </form>
+    <p>Need to create an account? <a href="{{ url_for('register') }}">Click here to register</a></p>
 
 {% endblock %}
