--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -2,4 +2,43 @@
 
 {% block content %}
     <h1>Register</h1>
+
+    <form action="" method="post">
+        {{ form.hidden_tag() }}
+
+        <p>
+            {{ form.username.label }}
+            {{form.username(size=32) }}<br>
+            {% for error in form.username.errors %}
+            <span styel="color: red;">[{{ error }}]</span>
+            {% endfor %}
+        </p>
+
+        <p>
+            {{ form.email.label }}
+            {{ form.email(size=64) }}<br>
+            {% for error in form.email.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+        </p>
+
+        <p>
+            {{ form.password.label }}
+            {{ form.password(size=32) }}
+            {% for error in form.password.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+        </p>
+
+        <p>
+            {{ form.password2.label}}
+            {{ form.password2(size=32) }}
+            {% for error in form.password2.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}            
+        </p>
+        <p>{{ form.submit }}</p>
+
+    </form>
+    <p>Need to create an account? <a href="{{ url_for('register') }}">Click here to register</a></p>
 {% endblock %}
