Debugged and updated forms.py and routes.py

--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -10,7 +10,7 @@
             {{ form.username.label }}
             {{form.username(size=32) }}<br>
             {% for error in form.username.errors %}
-            <span styel="color: red;">[{{ error }}]</span>
+            <span style="color: red;">[{{ error }}]</span>
             {% endfor %}
         </p>
 
