--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -23,7 +23,7 @@
     {% with messages = get_flashed_messages() %}
     {% if messages %}
     <ul>
-        {% for messagee in messages %}
+        {% for message in messages %}
         <li>{{ message }}</li>
         {% endfor %}
     </ul>
